--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,18 @@ services:
   web:
     container_name: web
     restart: always
-    build: ./
+    build: .
     ports:
-      - "80:3000"
+      - "3000:3000"
+    command: npm start
     volumes:
-      - .:/app
+      - ./web:/usr/app/
+      - /usr/app/node_modules
     links:
       - mongo
   mongo:
     image: mongo
+    volumes:
+      - ./data:/data/db
     ports:
-    - "27017:27017"
+      - "27017:27017"
